# vaccination-results-jp

./: IRYO-vaccination_data.csv  LICENSE  README.md  app.py  postprocess-iryo.ts  pyproject.toml  utils.py  visualize.ipynb  visualize.py
.github/workflows/: flat.yml  publish.yml
data/: data.csv
docs/: index.html  notebook.ipynb
