[tool.poetry]
name = "vaccination-results-jp"
version = "0.1.0"
description = ""
authors = ["bankruptko <bankruptko@protonmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
